src/test/deca/context/invalid/resultats/test_inexistent_var-cont.res
./src/test/deca/context/invalid/test_inexistent_var.deca:15:1: Expression identifier a is not declared in this scop 
